FIX overflow

--- a/reset.css
+++ b/reset.css
@@ -28,7 +28,6 @@
   
   body {
     margin: 0;
-    overflow-x: hidden;
   }
   
   /**
