--- a/style.css
+++ b/style.css
@@ -375,6 +375,10 @@ h4 {
   }
 }
 
+.animate-wrapper {
+  overflow-x: hidden;
+}
+
 .animate {
   opacity: 0;
   transition: all 0.3s ease-out;
